Fix Issues