@@ -33,6 +33,8 @@ import java.util.stream.Collectors;
  * GetAllPublicFieldNamesSnippet.
  */
 public class GetAllPublicFieldNamesSnippet {
+  private GetAllPublicFieldNamesSnippet() {
+  }
 
   /**
    * Print all declared public field names of the class or the interface the class extends.
@@ -43,6 +45,6 @@ public class GetAllPublicFieldNamesSnippet {
   public static List<String> getAllPublicFieldNames(final Class<?> clazz) {
     return Arrays.stream(clazz.getFields())
         .map(Field::getName)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
